--- a/custom/style.css
+++ b/custom/style.css
@@ -15,3 +15,17 @@ darkGrey	747704
 }
 
 /* TODO: Add font */
+*{
+
+	font-family: 'Raleway', sans-serif;
+	font-weight: 100;
+}
+
+h1{ margin:0;}
+h3{ margin-top:5px;}
+
+@media (max-width: 600px) {
+	h1{text-align: center;}
+
+
+ }
